syntax = "proto3";

package UserService.api.user.v1;

option go_package = "proto/pkg/api/user;user";

// SearchByNicknameRequest - запрос на получение списка юзеров по никнейму
message SearchByNicknameRequest {
  // запрос
  string query = 1 [json_name = "query"];
  // пагинация количества
  int32 limit = 2 [json_name = "limit"];
}

// SearchByNicknameResponse - ответ на получение списка юзеров по никнейму
message SearchByNicknameResponse {
  repeated UserProfile results = 1;
}

message CreateProfileRequest{
  UserProfile user_profile = 1;
}

message UserProfile{
  string user_id = 1;
  string nickname = 2;
  optional string bio = 3;
  optional string avatar_url = 4;
}

message CreateProfileResponse{
  UserProfile user_profile = 1;
}

message GetProfileByIDRequest{
  string id = 1;
}

message GetProfileByIDResponse{
  UserProfile user_profile = 1;
}

message UpdateProfileRequest {
  UserProfile user_profile = 1;
}

message GetProfileByNicknameRequest {
  string nickname = 1;
}

message UpdateProfileResponse {
  UserProfile user_profile = 1;
}

message GetProfileByNicknameResponse {
  UserProfile user_profile = 1;
}