syntax = "proto3";

package UserService.api;

import "user_service/messages.proto";

option go_package = "pkg/api/user;user";

// UserService - сервис управлением юзеров
service UserService {

  // Поиск по никнейму
  rpc SearchByNickname(SearchByNicknameRequest) returns (SearchByNicknameResponse) {}

  // CreateProfile - create profile
  rpc CreateProfile(CreateProfileRequest) returns (UserProfile){}

  // GetGetProfileByID - get profile by id
  rpc GetProfileByID(GetProfileByIDRequest) returns (UserProfile){}

  // Обновляет профиль пользователя
  // Принимает UpdateProfileRequest и возвращает UpdateProfileResponse
  rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse) {}

  // Получает профиль пользователя по никнейму
  // Принимает GetProfileByNicknameRequest и возвращает GetProfileByNicknameResponse
  rpc GetProfileByNickname(GetProfileByNicknameRequest)
      returns (GetProfileByNicknameResponse) {}

}